{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 9,
  "lineage": "459d6b05-e24b-5d0c-a553-6192606a4883",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vle7_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-074496d112d390347",
            "arn": "arn:aws:ec2:ap-south-1:495737978286:instance/i-069d27fc5b8f4af74",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069d27fc5b8f4af74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vle7-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d23f35bb3e82a084"
              }
            ],
            "primary_network_interface_id": "eni-0d23f35bb3e82a084",
            "private_dns": "ip-10-0-1-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_ip": "35.154.194.124",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7be7ec8c5902d3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5a8984b9e2e316f",
            "tags": {
              "Name": "vle-7-lab"
            },
            "tags_all": {
              "Name": "vle-7-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3404b0ea8e6b101"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495737978286",
            "id": "i-069d27fc5b8f4af74",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.vle7_kp",
            "aws_security_group.vle7_sg",
            "aws_subnet.vle7_subnet",
            "aws_vpc.vle7_vpc",
            "data.aws_ami.amazon_linux2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vle7_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495737978286:internet-gateway/igw-0dbf3269280f83a31",
            "id": "igw-0dbf3269280f83a31",
            "owner_id": "495737978286",
            "region": "ap-south-1",
            "tags": {
              "Name": "vle7-igw"
            },
            "tags_all": {
              "Name": "vle7-igw"
            },
            "vpc_id": "vpc-00c35e9f5a26b03cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vle7_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vle7_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495737978286:route-table/rtb-09ba831259e4d2a3e",
            "id": "rtb-09ba831259e4d2a3e",
            "owner_id": "495737978286",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbf3269280f83a31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vle7-rt"
            },
            "tags_all": {
              "Name": "vle7-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c35e9f5a26b03cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495737978286",
            "id": "rtb-09ba831259e4d2a3e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.vle7_igw",
            "aws_vpc.vle7_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vle7_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d591531a0e981d1",
            "region": "ap-south-1",
            "route_table_id": "rtb-09ba831259e4d2a3e",
            "subnet_id": "subnet-0c5a8984b9e2e316f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vle7_igw",
            "aws_route_table.vle7_rt",
            "aws_subnet.vle7_subnet",
            "aws_vpc.vle7_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vle7_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495737978286:security-group/sg-0c3404b0ea8e6b101",
            "description": "Allow SSH and Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3404b0ea8e6b101",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "vle7-jenkins-sg",
            "name_prefix": "",
            "owner_id": "495737978286",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vle7-sg"
            },
            "tags_all": {
              "Name": "vle7-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c35e9f5a26b03cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495737978286",
            "id": "sg-0c3404b0ea8e6b101",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vle7_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vle7_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495737978286:subnet/subnet-0c5a8984b9e2e316f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5a8984b9e2e316f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495737978286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "vle7-subnet"
            },
            "tags_all": {
              "Name": "vle7-subnet"
            },
            "vpc_id": "vpc-00c35e9f5a26b03cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495737978286",
            "id": "subnet-0c5a8984b9e2e316f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vle7_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vle7_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495737978286:vpc/vpc-00c35e9f5a26b03cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cc2a27a7ea22e58",
            "default_route_table_id": "rtb-020fdb24461794371",
            "default_security_group_id": "sg-0460dbd78b8289d42",
            "dhcp_options_id": "dopt-0cb68cb35eb087c6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c35e9f5a26b03cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020fdb24461794371",
            "owner_id": "495737978286",
            "region": "ap-south-1",
            "tags": {
              "Name": "vle7-vpc"
            },
            "tags_all": {
              "Name": "vle7-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}